"fix linear gradient for news slider background on safari"

--- a/#src/scss/news.scss
+++ b/#src/scss/news.scss
@@ -27,7 +27,7 @@
       height: 749px;
       padding: 34px 32px 0 32px;
       border-radius: 43px 43px 0 0;
-      background: linear-gradient(#fff 80%, transparent);
+      background: linear-gradient(#fff 80%, rgba(255, 255, 255, 0.001));
       box-shadow: none;
       &>a:hover {
         text-decoration: none;
